infrastructure/observability/ntfy/resources/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy
  namespace: observability
  labels:
    app: ntfy
    component: observability
spec:
  parentRefs:
    - name: gateway-external
      namespace: networking
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - ntfy.quido.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ntfy
          port: 80
          weight: 1
          group: ""
          kind: Service
